--- a/pantalla5.html
+++ b/pantalla5.html
@@ -7,34 +7,58 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/css">
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
     <title>YouTiket/evento</title>
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container-fluid  baner">
         <div class="row">
             <div class="col-12">
-                <img src="" alt="">
+                <img class="banerImg" src="./img/TiketF.png" alt="">
             </div>
         </div>
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid barra">
         <div class="row">
-            <div class="col-6">
+            <div class="col-8">
             </div>
-            <div class="col-3">
-                <button> Inicio </button>
+            <div class="col-2">
+                <button type="button" class="btn btn-secondary btninicio">Inicio</button>
             </div>
-            <div class="col-3">
-                <button> Categoria </button>
+            <div class="col-2 dropdown">
+                <a class="btn btn-secondary dropdown-toggle btncat" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                    Categoria
+                  </a>
+                
+                  <ul class="dropdown-menu " aria-labelledby="dropdownMenuLink">
+                    <li><a class="dropdown-item" href="#">Automovilismo</a></li>
+                    <li><a class="dropdown-item" href="#">Anime</a></li>
+                    <li><a class="dropdown-item" href="#">Conciertos</a></li>
+                    <li><a class="dropdown-item" href="#">Peliculas</a></li>
+                    <li><a class="dropdown-item" href="#">Teatro</a></li>
+                    <li><a class="dropdown-item" href="#">Video juegos</a></li>
+                  </ul>
             </div>
         </div>
     </div>
-    <div class="container-fluid">
+    
+    <div class="container-fluid bg bgp5">
         <div class="row">
-            <div class="col-12">
-
+            <div class="col-4"></div>
+            <div class="col-4">
+                <p class="textp5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus doloribus distinctio blanditiis aliquid modi,
+                   ratione recusandae nesciunt velit inventore sunt aspernatur in assumenda tenetur id tempora pariatur et delectus fugiat!
+                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, illum? Repellendus repellat iure voluptatem ipsam beatae, 
+                   consequuntur sit, quo laborum ullam odio iste totam quaerat aliquam modi necessitatibus. Obcaecati, consequuntur.
+                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum corporis consequatur, cum iste at eos omnis laborum optio atque 
+                   hic aut ipsum ipsa error autem, voluptas officiis! Nostrum, voluptate ratione!</p>
+            </div>
+            <div class="col-4"></div>
+            <div class="col-5"></div>
+            <div class="col-2">
+                <button class="buttonp5">Finalizr y volver al inicio</button>
             </div>
         </div>
     </div>
