--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     <div class="container-fluid  baner">
         <div class="row">
             <div class="col-12">
-                <img class="banerImg" src="./img/TiketF.png" alt="">
+                <img class="banerImg banerhp banerht" src="./img/TiketF.png" alt="">
             </div>
         </div>
     </div>
-    <div class="container-fluid barra">
+    <div class="container-fluid barra barrahp barraht">
         <div class="row">
-            <div class="col-8">
+            <div class="col-8 ">
             </div>
-            <div class="col-2">
-                <button type="button" class="btn btn-secondary btninicio">Inicio</button>
+            <div class="col-2 colpading">
+                <button type="button" class="btn btn-secondary btninicio btniniciohp margininicioht">Inicio</button>
             </div>
-            <div class="col-2 dropdown">
-                <a class="btn btn-secondary dropdown-toggle btncat" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+            <div class="col-2 dropdown padingctght">
+                <a class="btn btn-secondary dropdown-toggle btncat btncathp " href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
                     Categoria
                   </a>
                 
@@ -45,15 +45,15 @@
     </div>
     
     <div class="container-fluid bg">
-        <h2 class="h2">Recomendados</h2>
+        <h2 class="h2 h2hp h2ht">Recomendados</h2>
         <div class="container-fluid eve">
             <div class="row">
-                    <div class="col-1"></div>
-                    <div class="col-3">
-                        <img class="imgeve" src="./img/will-murai-blizzcon2020-v-logo2.jpg" alt="">
+                    <div class="col-1 colwidht"></div>
+                    <div class="col-3 colpadingimg">
+                        <img class="imgeve imghp imght" src="./img/will-murai-blizzcon2020-v-logo2.jpg" alt="">
                     </div>
                     <div class="col-8">
-                       <ul class="ulhome">
+                       <ul class="ulhome ulhomep">
                            <li><p>Nombre del evento</p></li>
                            <li><p>Fecha</p></li>
                            <li><p>Hora</p></li>
@@ -67,12 +67,12 @@
         </div>
         <div class="container-fluid eve2">
             <div class="row">
-                    <div class="col-1"></div>
-                    <div class="col-3">
-                        <img class="imgeve" src="./img/Afiche-Aves.jpeg" alt="">
+                    <div class="col-1 colwidht"></div>
+                    <div class="col-3 colpadingimg">
+                        <img class="imgeve imghp imght" src="./img/Afiche-Aves.jpeg" alt="">
                     </div>
                     <div class="col-8">
-                        <ul class="ulhome">
+                        <ul class="ulhome ulhomep">
                             <li><p>Nombre del evento</p></li>
                            <li><p>Fecha</p></li>
                            <li><p>Hora</p></li>
@@ -87,12 +87,12 @@
         </div>
         <div class="container-fluid eve">
             <div class="row">
-                    <div class="col-1"></div>
-                    <div class="col-3">
-                        <img class="imgeve" src="./img/785312-942024e4442bb9bfc2edb89f66c6dae8.jpeg" alt="">
+                    <div class="col-1 colwidht"></div>
+                    <div class="col-3 colpadingimg">
+                        <img class="imgeve imghp imght" src="./img/785312-942024e4442bb9bfc2edb89f66c6dae8.jpeg" alt="">
                     </div>
                     <div class="col-8">
-                        <ul class="ulhome">
+                        <ul class="ulhome ulhomep">
                             <li><p>Nombre del evento</p></li>
                            <li><p>Fecha</p></li>
                            <li><p>Hora</p></li>
@@ -107,12 +107,12 @@
         </div>
         <div class="container-fluid eve2">
             <div class="row">
-                    <div class="col-1"></div>
-                    <div class="col-3">
-                        <img class="imgeve" src="./img/19875196_1664896113551564_3979986985389030833_n.jpg" alt="">
+                    <div class="col-1 colwidht"></div>
+                    <div class="col-3 colpadingimg">
+                        <img class="imgeve imghp imght" src="./img/19875196_1664896113551564_3979986985389030833_n.jpg" alt="">
                     </div>
                     <div class="col-8">
-                        <ul class="ulhome">
+                        <ul class="ulhome ulhomep">
                             <li><p>Nombre del evento</p></li>
                            <li><p>Fecha</p></li>
                            <li><p>Hora</p></li>
