--- a/pantalla3.html
+++ b/pantalla3.html
@@ -10,25 +10,25 @@
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
-    <title>YouTiket/evento</title>
+    <title>YouTiket/</title>
   </head>
   <body>
     <div class="container-fluid  baner">
         <div class="row">
             <div class="col-12">
-                <img class="banerImg" src="./img/TiketF.png" alt="">
+                <img class="banerImg banerhp banerht" src="./img/TiketF.png" alt="">
             </div>
         </div>
     </div>
-    <div class="container-fluid barra">
+    <div class="container-fluid barra barrahp barraht">
         <div class="row">
-            <div class="col-8">
+            <div class="col-8 ">
             </div>
-            <div class="col-2">
-                <button type="button" class="btn btn-secondary btninicio">Inicio</button>
+            <div class="col-2 colpading">
+                <button type="button" class="btn btn-secondary btninicio btniniciohp margininicioht">Inicio</button>
             </div>
-            <div class="col-2 dropdown">
-                <a class="btn btn-secondary dropdown-toggle btncat" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+            <div class="col-2 dropdown padingctght">
+                <a class="btn btn-secondary dropdown-toggle btncat btncathp " href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
                     Categoria
                   </a>
                 
@@ -44,29 +44,29 @@
         </div>
     </div>
 
-    <div class="container-fluid bg bgp3">
-        <div class="row">
-            <div class="col-3"></div>
-            <div class="col-2">
+    <div class="container-fluid bg bgp3 bgp3p bgp3t">
+        <div class="row divrowp3t">
+            <div class="col-3 colwidp3 colwidp3t"></div>
+            <div class="col-2 colwidp3p coltexwidp3t">
                 <p class="textp3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis voluptates laudantium
                     dolorem obcaecati atque voluptas accusamus aspernatur, sequi error totam, architecto corporis quas.</p>
             </div>
-            <div class="col-2">
-                <ul class="textp3">
+            <div class="col-2 colwidp3p coltexwidp3t">
+                <ul class="textp3 ulp3p">
                     <li><p>Cantidad de personas mayores:</p></li>
                     <li><p>Cantidad de personas menores:</p></li>
                     <li><p>Total a pagar por las entradas:</p></li>
                 </ul>
             </div>
-            <div class="col-2">
-                <ul>
-                    <li class="cajatext"><input type="text"></li>
-                    <li class="cajatext"><input type="text"></li>
-                    <li class="cajatext"><input type="text"></li>
+            <div class="col-2 colwidp3p">
+                <ul class="ulp3p">
+                    <li class="cajatext ilp3t"><input class="imputp3p" type="text"></li>
+                    <li class="cajatext ilp3t"><input class="imputp3p" type="text"></li>
+                    <li class="cajatext ilp3t"><input class="imputp3p" type="text"></li>
                 </ul>
             </div>
-            <div class="col-3"></div>
-            <div class="col-5"></div>
+            <div class="col-3 colwidp3 colwidp3t"></div>
+            <div class="col-5 colwidbutp3p"></div>
             <div class="col-2">
                 <button class="buttonp3">Registrarse</button>
             </div>
