--- a/pantalla4.html
+++ b/pantalla4.html
@@ -10,25 +10,25 @@
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
-    <title>YouTiket/evento</title>
+    <title>YouTiket/pantalla4</title>
   </head>
   <body>
     <div class="container-fluid  baner">
         <div class="row">
             <div class="col-12">
-                <img class="banerImg" src="./img/TiketF.png" alt="">
+                <img class="banerImg banerhp banerht" src="./img/TiketF.png" alt="">
             </div>
         </div>
     </div>
-    <div class="container-fluid barra">
+    <div class="container-fluid barra barrahp barraht">
         <div class="row">
-            <div class="col-8">
+            <div class="col-8 ">
             </div>
-            <div class="col-2">
-                <button type="button" class="btn btn-secondary btninicio">Inicio</button>
+            <div class="col-2 colpading">
+                <button type="button" class="btn btn-secondary btninicio btniniciohp margininicioht">Inicio</button>
             </div>
-            <div class="col-2 dropdown">
-                <a class="btn btn-secondary dropdown-toggle btncat" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+            <div class="col-2 dropdown padingctght ">
+                <a class="btn btn-secondary dropdown-toggle btncat btncathp " href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
                     Categoria
                   </a>
                 
@@ -44,24 +44,24 @@
         </div>
     </div>
     
-    <div class="container-fluid bg bgp4">
-        <div class="row">
-            <div class="col-4"></div>
-            <div class="col-2">
-                <ul class="textp4">
+    <div class="container-fluid bg bgp4 bgp4p bgp4t">
+        <div class="row margintrowp4t">
+            <div class="col-4 colwidp4 colwidp4t"></div>
+            <div class="col-2 colwidp4p coltexwidp4t">
+                <ul class="textp4 ulp4t">
                     <li><p>Nombre complet:</p></li>
                     <li><p>Correo electronico:</p></li>
                 </ul>
             </div>
-            <div class="col-3">
+            <div class="col-3 colwidp4p">
                 <ul>
-                    <li class="cajatext"><input type="text"></li>
-                    <li class="cajatext"><input type="text"></li>
+                    <li class="cajatext"><input class="imputp4p" type="text"></li>
+                    <li class="cajatext"><input class="imputp4p" type="text"></li>
                 </ul>
             </div>
-            <div class="col-3"></div>
-            <div class="col-5"></div>
-            <div class="col-2">
+            <div class="col-3 colwidp4"></div>
+            <div class="col-5 colwidbutp4p colwidbuttonp4t"></div>
+            <div class="col-2 colwidbuttonp4p">
                 <button class="buttonp4">Finalizar Registro</button>
             </div>
         </div>
