--- a/pantalla5.html
+++ b/pantalla5.html
@@ -10,25 +10,25 @@
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
-    <title>YouTiket/evento</title>
+    <title>YouTiket/pantalla5</title>
   </head>
   <body>
     <div class="container-fluid  baner">
         <div class="row">
             <div class="col-12">
-                <img class="banerImg" src="./img/TiketF.png" alt="">
+                <img class="banerImg banerhp banerht" src="./img/TiketF.png" alt="">
             </div>
         </div>
     </div>
-    <div class="container-fluid barra">
+    <div class="container-fluid barra barrahp barraht">
         <div class="row">
-            <div class="col-8">
+            <div class="col-8 ">
             </div>
-            <div class="col-2">
-                <button type="button" class="btn btn-secondary btninicio">Inicio</button>
+            <div class="col-2 colpading">
+                <button type="button" class="btn btn-secondary btninicio btniniciohp margininicioht">Inicio</button>
             </div>
-            <div class="col-2 dropdown">
-                <a class="btn btn-secondary dropdown-toggle btncat" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+            <div class="col-2 dropdown padingctght">
+                <a class="btn btn-secondary dropdown-toggle btncat btncathp " href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
                     Categoria
                   </a>
                 
@@ -43,11 +43,11 @@
             </div>
         </div>
     </div>
-    
-    <div class="container-fluid bg bgp5">
-        <div class="row">
-            <div class="col-4"></div>
-            <div class="col-4">
+
+    <div class="container-fluid bg bgp5 bgp5t">
+        <div class="row margintrowp5t">
+            <div class="col-4 colwidp5p colwidp5t"></div>
+            <div class="col-4 coltextwidp5p coltextwidp5t">
                 <p class="textp5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus doloribus distinctio blanditiis aliquid modi,
                    ratione recusandae nesciunt velit inventore sunt aspernatur in assumenda tenetur id tempora pariatur et delectus fugiat!
                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, illum? Repellendus repellat iure voluptatem ipsam beatae, 
@@ -55,9 +55,9 @@
                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum corporis consequatur, cum iste at eos omnis laborum optio atque 
                    hic aut ipsum ipsa error autem, voluptas officiis! Nostrum, voluptate ratione!</p>
             </div>
-            <div class="col-4"></div>
-            <div class="col-5"></div>
-            <div class="col-2">
+            <div class="col-4 colwidp5p colwidp5t"></div>
+            <div class="col-5 colwidbutp5p colwidbutp5t" ></div>
+            <div class="col-2 colwidbuttonp5p colwidbuttonp5p{">
                 <button class="buttonp5">Finalizr y volver al inicio</button>
             </div>
         </div>
