--- a/pantalla2.html
+++ b/pantalla2.html
@@ -16,7 +16,7 @@
     <div class="container-fluid  baner">
         <div class="row">
             <div class="col-12">
-                <img class="banerImg banerhp banerht" src="./img/TiketF.png" alt="">
+               <a href="./index.html"><img class="banerImg banerhp banerht" src="./img/TiketF.png" alt=""></a> 
             </div>
         </div>
     </div>
@@ -25,7 +25,7 @@
             <div class="col-8">
             </div>
             <div class="col-2 colpading">
-                <button type="button" class="btn btn-secondary btninicio btniniciohp margininicioht">Inicio</button>
+                <a href="./index.html"><button type="button" class="btn btn-secondary btninicio btniniciohp margininicioht">Inicio</button></a>
             </div>
             <div class="col-2 dropdown padingctght">
                 <a class="btn btn-secondary dropdown-toggle btncat btncathp" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
@@ -67,7 +67,7 @@
             </div> 
             <div class="col-3 colwidbutp2t"></div>
             <div class="col-1">
-                <button class="buttonp2 buttonp2p"> Registrarse </button>
+                <a href="./pantalla3.html"><button class="buttonp2 buttonp2p"> Registrarse </button></a> 
     
             </div>
         </div>
@@ -76,16 +76,16 @@
     <div class="container-fluid banerp">
         <div class="row">
             <div class="col-3">
-                <img class="imgbot imgbotp imgbott" src="./img/images.jpg" alt="">
+                <a href="./pantalla2.html"><img class="imgbot imgbotp imgbott" src="./img/images.jpg" alt=""></a>
             </div>
             <div class="col-3">
-                <img class="imgbot imgbotp imgbott" src="./img/UWOQR3DP3NC73HCVRAIWAJPQMU.jpg" alt="">
+                <a href="./pantalla2.html"><img class="imgbot imgbotp imgbott" src="./img/UWOQR3DP3NC73HCVRAIWAJPQMU.jpg" alt=""></a>
             </div>
             <div class="col-3">
-                <img class="imgbot imgbotp imgbott" src="./img/Ez3KfUBVEAEaHFT.jpg" alt="">
+                <a href="./pantalla2.html"><img class="imgbot imgbotp imgbott" src="./img/Ez3KfUBVEAEaHFT.jpg" alt=""></a>
             </div>
             <div class="col-3">
-                <img class="imgbot imgbotp imgbott" src="./img/will-murai-blizzcon2020-v-logo2.jpg" alt="">
+                <a href="./pantalla2.html"><img class="imgbot imgbotp imgbott" src="./img/will-murai-blizzcon2020-v-logo2.jpg" alt=""></a>
             </div>
         </div>
     </div>
