--- a/pantalla5.html
+++ b/pantalla5.html
@@ -16,7 +16,7 @@
     <div class="container-fluid  baner">
         <div class="row">
             <div class="col-12">
-                <img class="banerImg banerhp banerht" src="./img/TiketF.png" alt="">
+                <a href="./index.html"><img class="banerImg banerhp banerht" src="./img/TiketF.png" alt=""></a>
             </div>
         </div>
     </div>
@@ -25,7 +25,7 @@
             <div class="col-8 ">
             </div>
             <div class="col-2 colpading">
-                <button type="button" class="btn btn-secondary btninicio btniniciohp margininicioht">Inicio</button>
+                <a href="./index.html"><button type="button" class="btn btn-secondary btninicio btniniciohp margininicioht">Inicio</button></a>
             </div>
             <div class="col-2 dropdown padingctght">
                 <a class="btn btn-secondary dropdown-toggle btncat btncathp " href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
@@ -58,7 +58,7 @@
             <div class="col-4 colwidp5p colwidp5t"></div>
             <div class="col-5 colwidbutp5p colwidbutp5t" ></div>
             <div class="col-2 colwidbuttonp5p colwidbuttonp5p{">
-                <button class="buttonp5">Finalizr y volver al inicio</button>
+                <a href="./index.html"><button class="buttonp5">Finalizr y volver al inicio</button></a>
             </div>
         </div>
     </div>
