--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container-fluid  baner">
         <div class="row">
             <div class="col-12">
-                <img class="banerImg banerhp banerht" src="./img/TiketF.png" alt="">
+                <a href="./index.html"><img class="banerImg banerhp banerht" src="./img/TiketF.png" alt=""></a>
             </div>
         </div>
     </div>
@@ -25,7 +25,7 @@
             <div class="col-8 ">
             </div>
             <div class="col-2 colpading">
-                <button type="button" class="btn btn-secondary btninicio btniniciohp margininicioht">Inicio</button>
+                <a href="./index.html"><button type="button" class="btn btn-secondary btninicio btniniciohp margininicioht">Inicio</button></a>
             </div>
             <div class="col-2 dropdown padingctght">
                 <a class="btn btn-secondary dropdown-toggle btncat btncathp " href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
@@ -50,7 +50,7 @@
             <div class="row">
                     <div class="col-1 colwidht"></div>
                     <div class="col-3 colpadingimg">
-                        <img class="imgeve imghp imght" src="./img/will-murai-blizzcon2020-v-logo2.jpg" alt="">
+                        <a href="./pantalla2.html"><img class="imgeve imghp imght" src="./img/will-murai-blizzcon2020-v-logo2.jpg" alt=""></a>
                     </div>
                     <div class="col-8">
                        <ul class="ulhome ulhomep">
@@ -69,7 +69,7 @@
             <div class="row">
                     <div class="col-1 colwidht"></div>
                     <div class="col-3 colpadingimg">
-                        <img class="imgeve imghp imght" src="./img/Afiche-Aves.jpeg" alt="">
+                        <a href="./pantalla2.html"><img class="imgeve imghp imght" src="./img/Afiche-Aves.jpeg" alt=""></a>
                     </div>
                     <div class="col-8">
                         <ul class="ulhome ulhomep">
@@ -89,7 +89,7 @@
             <div class="row">
                     <div class="col-1 colwidht"></div>
                     <div class="col-3 colpadingimg">
-                        <img class="imgeve imghp imght" src="./img/785312-942024e4442bb9bfc2edb89f66c6dae8.jpeg" alt="">
+                        <a href="./pantalla2.html"><img class="imgeve imghp imght" src="./img/785312-942024e4442bb9bfc2edb89f66c6dae8.jpeg" alt=""></a>
                     </div>
                     <div class="col-8">
                         <ul class="ulhome ulhomep">
@@ -109,7 +109,7 @@
             <div class="row">
                     <div class="col-1 colwidht"></div>
                     <div class="col-3 colpadingimg">
-                        <img class="imgeve imghp imght" src="./img/19875196_1664896113551564_3979986985389030833_n.jpg" alt="">
+                        <a href="./pantalla2.html"><img class="imgeve imghp imght" src="./img/19875196_1664896113551564_3979986985389030833_n.jpg" alt=""></a>
                     </div>
                     <div class="col-8">
                         <ul class="ulhome ulhomep">
