--- a/pantalla3.html
+++ b/pantalla3.html
@@ -16,7 +16,7 @@
     <div class="container-fluid  baner">
         <div class="row">
             <div class="col-12">
-                <img class="banerImg banerhp banerht" src="./img/TiketF.png" alt="">
+                <a href="./index.html"><img class="banerImg banerhp banerht" src="./img/TiketF.png" alt=""></a>
             </div>
         </div>
     </div>
@@ -25,7 +25,7 @@
             <div class="col-8 ">
             </div>
             <div class="col-2 colpading">
-                <button type="button" class="btn btn-secondary btninicio btniniciohp margininicioht">Inicio</button>
+                <a href="./index.html"><button type="button" class="btn btn-secondary btninicio btniniciohp margininicioht">Inicio</button></a>
             </div>
             <div class="col-2 dropdown padingctght">
                 <a class="btn btn-secondary dropdown-toggle btncat btncathp " href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
@@ -68,7 +68,7 @@
             <div class="col-3 colwidp3 colwidp3t"></div>
             <div class="col-5 colwidbutp3p"></div>
             <div class="col-2">
-                <button class="buttonp3">Registrarse</button>
+                <a href="./pantalla4.html"><button class="buttonp3">Registrarse</button></a>
             </div>
         </div>
     </div>
